deployment/k8s-base-layer-deployment.yaml
###################################
# user_management 
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-management
  labels:
    app: user-management
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-management
  template:
    metadata:
      labels:
        app: user-management
    spec:
      containers:
        - name: user-management
          image: us-central1-docker.pkg.dev/miso-dann/delivery-miso-grupo-17/user_management:1.0
          ports:
            - containerPort: 3000
          # Realizar pull siempre a la imagen
          imagePullPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: servicio-user-management
  annotations:
    cloud.google.com/backend-config: '{"default": "delivery-user-management-config"}'
spec:
  type: NodePort
  selector:
    app: user-management
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30100
---
###################################
# post_management 
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-management
  labels:
    app: post-management
spec:
  replicas: 1
  selector:
    matchLabels:
      app: post-management
  template:
    metadata:
      labels:
        app: post-management
    spec:
      containers:
        - name: post-management
          image: us-central1-docker.pkg.dev/miso-dann/delivery-miso-grupo-17/post_management:1.0
          ports:
            - containerPort: 3001
          # Realizar pull siempre a la imagen
          imagePullPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: servicio-post-management
  annotations:
    cloud.google.com/backend-config: '{"default": "delivery-post-management-config"}'
spec:
  type: NodePort
  selector:
    app: post-management
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
      nodePort: 30101
---
###################################
# route_management  
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: route-management
  labels:
    app: route-management
spec:
  replicas: 1
  selector:
    matchLabels:
      app: route-management
  template:
    metadata:
      labels:
        app: route-management
    spec:
      containers:
        - name: route-management
          image: us-central1-docker.pkg.dev/miso-dann/delivery-miso-grupo-17/route_management:1.0
          ports:
            - containerPort: 3002
          # Realizar pull siempre a la imagen
          imagePullPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: servicio-route-management
  annotations:
    cloud.google.com/backend-config: '{"default": "delivery-route-management-config"}'
spec:
  type: NodePort
  selector:
    app: route-management
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3002
      nodePort: 30102
---
###################################
# offer-management 
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: offer-management
  labels:
    app: offer-management
spec:
  replicas: 1
  selector:
    matchLabels:
      app: offer-management
  template:
    metadata:
      labels:
        app: offer-management
    spec:
      containers:
        - name: offer-management
          image: us-central1-docker.pkg.dev/miso-dann/delivery-miso-grupo-17/offer_management:1.0
          ports:
            - containerPort: 3003
          # Realizar pull siempre a la imagen
          imagePullPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: servicio-offer-management
  annotations:
    cloud.google.com/backend-config: '{"default": "delivery-offer-management-config"}'
spec:
  type: NodePort
  selector:
    app: offer-management
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3003
      nodePort: 30103
